# auth

./: .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.e2e  Makefile  docker-compose.dev.yaml  docker-compose.e2e.yaml
.github/workflows/: build-and-publish-image.yaml  docker-image.yaml  e2e-tests.yaml  lint-and-test.yaml  unit-tests.yaml
e2e/: auth.py
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_auth_tables.rs
src/: main.rs
src/entities/: key.rs  mod.rs  prelude.rs  session.rs  user.rs
