[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-server"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
tonic = "0.11"
tonic-reflection = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"
